# sumtex

./: LICENSE  README.md  pyproject.toml
sumtex/: __main__.py  latex.py  requests.py
