[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sumtex"
authors = [
    {name = "Fabian Joswig", email = "fabian.joswig@ed.ac.uk"},
]
description = "My package description"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["GPT", "latex", "summarize"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "openai",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "sumtex.__version__"}

[project.scripts]
sumtex = "sumtex.__main__:main"
